--- a/web/main.xhtml
+++ b/web/main.xhtml
@@ -19,7 +19,14 @@
     <h:graphicImage library="images" name="bullet-hole-red.png" id="bulletHoleRedImage" class="scriptImage" />
     <canvas id="areaCanvas" width="400" height="400" />
 
-    <h:form>
+    <h:form id="areaForm" prependId="false" style="display: none;">
+        <h:inputText id="areaXField" value="#{queryBean.x}" required="true" converter="Lab3_Web.BigDecimal" />
+        <h:inputText id="areaYField" value="#{queryBean.y}" required="true" converter="Lab3_Web.BigDecimal" />
+        <h:inputText id="areaRField" value="#{queryBean.r}" required="true" converter="Lab3_Web.BigDecimal" />
+        <h:commandButton id="areaFormButton" action="#{queryBean.action}" />
+    </h:form>
+
+    <h:form id="mainForm" prependId="false">
         <table>
             <tr>
                 <td><h:outputLabel value="X: " /></td>
@@ -44,7 +51,7 @@
             <tr>
                 <td><h:outputLabel value="R: " /></td>
                 <td>
-                    <h:inputText id="rField" value="#{queryBean.r}" required="true" label="R" styleClass="rField"
+                    <h:inputText id="rField" value="#{queryBean.r}" required="true" label="R"
                                  converter="Lab3_Web.BigDecimal" validator="#{queryBean.validateR}" />
                 </td>
             </tr>
@@ -59,7 +66,7 @@
             </tr>
         </table>
 
-        <h:messages />
+        <h:messages for="mainForm" />
         <h:commandButton action="#{queryBean.action}" value="Проверить" />
     </h:form>
 
@@ -95,10 +102,10 @@
 
     <script type="text/javascript">
         document.body.onload = () => {
-            Array.prototype.forEach.call(document.querySelectorAll(".rField"), (input) => {
+            (function (input) {
                 area.onRChanged(input.value);
                 input.readOnly = true;
-            });
+            })(document.getElementById('rField'));
 
             area.setHistory([
                 <ui:repeat value="#{historyBean.reversedQueries}" var="query">
