--- a/src/main/webapp/main.xhtml
+++ b/src/main/webapp/main.xhtml
@@ -82,7 +82,7 @@
 
         <ui:include src="templates/homepage.xhtml" />
 
-        <c:if test="#{not empty historyBean.reversedQueries}">
+        <c:if test="#{not empty historyBean.queries}">
             <table class="historyTable">
                 <thead>
                 <tr>
