--- a/src/main/webapp/main.xhtml
+++ b/src/main/webapp/main.xhtml
@@ -21,6 +21,8 @@
     <h:graphicImage library="images" name="bullet-hole-red.png" id="bulletHoleRedImage" class="scriptImage"/>
     <canvas id="areaCanvas" width="400" height="400"/>
 
+    <h:outputText id="historyPoints" value="#{queryBean.pointsJson}" style="display: none;" />
+
     <h:form id="areaForm" prependId="false">
         <h:inputText id="areaXField" value="#{queryBean.x}"
                      required="true" requiredMessage="Вы не выбрали X."
@@ -35,7 +37,8 @@
                      converter="Lab3_Web.BigDecimal" converterMessage="R должен быть числом."
                      validator="#{queryBean.validateR}" validatorMessage="Вы выбрали недопустимый R." />
 
-        <h:commandButton id="areaFormButton" action="#{queryBean.action}"/>
+        <p:commandButton id="areaFormButton" action="#{queryBean.action}"
+                         update="historyPoints historyTable" oncomplete="reloadHistory();" />
 
         <h:message for="areaXField"/>
         <h:message for="areaYField"/>
@@ -88,33 +91,21 @@
             </tr>
         </table>
 
-        <h:commandButton action="#{queryBean.action}" value="Проверить" />
+        <p:commandButton action="#{queryBean.action}" value="Проверить"
+                         update="historyPoints historyTable" oncomplete="reloadHistory();" />
     </h:form>
 
     <ui:include src="templates/homepage.xhtml" />
 
     <c:if test="#{not empty historyBean.queries}">
-        <table class="historyTable">
-            <thead>
-            <tr>
-                <th>X</th>
-                <th>Y</th>
-                <th>R</th>
-                <th>результат</th>
-            </tr>
-            </thead>
-
-            <tbody>
-            <ui:repeat value="#{historyBean.reversedQueries}" var="query">
-                <tr>
-                    <td style="white-space: nowrap;">#{query.x}</td>
-                    <td style="word-break: break-all;">#{query.y}</td>
-                    <td style="white-space: nowrap;">#{query.r}</td>
-                    <td style="white-space: nowrap;">#{query.result ? 'есть пробитие' : 'промазал'}</td>
-                </tr>
-            </ui:repeat>
-            </tbody>
-        </table>
+        <p:dataTable styleClass="historyTable" id="historyTable"
+                     var="query" value="#{historyBean.reversedQueries}"
+                     paginator="true" rows="20" style="overflow: hidden;">
+            <p:column headerText="X" style="white-space: nowrap;">#{query.x}</p:column>
+            <p:column headerText="Y" style="word-break: break-all;">#{query.y}</p:column>
+            <p:column headerText="R" style="white-space: nowrap;">#{query.r}</p:column>
+            <p:column headerText="результат" style="white-space: nowrap;">#{query.result ? 'есть пробитие' : 'промазал'}</p:column>
+        </p:dataTable>
 
         <ui:include src="templates/homepage.xhtml"/>
     </c:if>
@@ -122,17 +113,17 @@
     <h:outputScript library="js" name="area.js"/>
 
     <script type="text/javascript">
+        function reloadHistory() {
+            area.setHistory(JSON.parse(document.getElementById("historyPoints").innerText));
+        }
+
         document.body.onload = () => {
             (function (input) {
                 area.onRChanged(input.value);
                 input.readOnly = true;
             })(document.getElementById('rField'));
 
-            area.setHistory([
-                <ui:repeat value="#{historyBean.queries}" var="query">
-                    {x: #{query.x}, y: #{query.y}, r: #{query.r}, result: #{query.result}},
-                </ui:repeat>
-            ]);
+            reloadHistory();
         };
     </script>
 </h:body>
